# bevy_snake

./: Cargo.toml  Makefile.toml  index.html
src/: components.rs  consts.rs  food.rs  main.rs  resources.rs  snake.rs
wasm/: index.html
