[package]
name = "bevy_snake"
version = "0.1.0"
authors = []
edition = "2021"
repository = "https://github.com/mfdorst/bevy_snake"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
rand = "0.8"

[profile.dev]
opt-level = 1
